--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,10 @@
     justify-content: center;
     left:0;
     margin-top:72px;
+    background:url("../cover/345130BA4005005CD21565A281ABE8CE.jpg");
+    background-size:cover;
+    width: 1980px;
+    height: 900px;
 }
 
 [type=radio] {
