--- a/css/common.css
+++ b/css/common.css
@@ -220,4 +220,9 @@ html{
 .contactbox{
     border:0;box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
-
+.mediumgreen{
+    color:mediumseagreen;
+}
+.height400{
+ height:400px;
+}
