Move inline styles to external css file (5/6)

--- a/css/secondary.css
+++ b/css/secondary.css
@@ -43,6 +43,15 @@
 #slide1 { background: url("../secondaryschoolphoto/carousel2/resize1.jpg") }
 #slide2 { background:url("../secondaryschoolphoto/carousel2/resize2.jpg") }
 #slide3 { background: url("../secondaryschoolphoto/carousel2/resize3.jpg")}
-.contactbox{
-    border:0;box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+.slidecarousell{
+    width:804px;box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+.carouselphotosize{
+    height:500px;
+}
+.dunearnlogo{
+    height:300px;
+}
+.academiccap{
+    height:300px;
 }
