--- a/css/sp.css
+++ b/css/sp.css
@@ -8,3 +8,23 @@
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;"
 
 }
+.daaacoverphoto{
+    width:696px;
+    height:500px;
+}
+.spcarouselphoto1{
+    width:500px;height:400px;box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+}
+.spcarouselphoto{
+    height:400px;
+}
+.studysvg{
+    height:300px;
+}
+.foodsvg{
+     height:300px;
+ }
+.splogo{
+    position:relative;
+    top:50px;
+}
