Add official authorship

--- a/css/sp.css
+++ b/css/sp.css
@@ -1,3 +1,13 @@
+/*
+MODULE NAME : ST0501 : FRONT-END WEB DEVELOPMENT
+MODULE LECTURER: MR LIM CHIN MIN
+MODULE ASSIGNMENT: CA2 WEBSITE ASSIGNMENT (WITH BOOTSTRAP AND JS)
+Student Name: CHEN ZHUOFAN
+Student No. : P2100746
+Student Class: DAAA/FT/1A/04
+Page:Singapore Polytechnic Experience (CSS)
+Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
+*/
 #daaaimg{
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;"
 }
