--- a/css/common.css
+++ b/css/common.css
@@ -1,3 +1,13 @@
+/*
+MODULE NAME : ST0501 : FRONT-END WEB DEVELOPMENT
+MODULE LECTURER: MR LIM CHIN MIN
+MODULE ASSIGNMENT: CA2 WEBSITE ASSIGNMENT (WITH BOOTSTRAP AND JS)
+Student Name: CHEN ZHUOFAN
+Student No. : P2100746
+Student Class: DAAA/FT/1A/04
+Page:Common layout (CSS)
+Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
+*/
 html{
     scroll-behavior: smooth;
     overflow-x: hidden;
