--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,13 @@
-
+/*
+MODULE NAME : ST0501 : FRONT-END WEB DEVELOPMENT
+MODULE LECTURER: MR LIM CHIN MIN
+MODULE ASSIGNMENT: CA2 WEBSITE ASSIGNMENT (WITH BOOTSTRAP AND JS)
+Student Name: CHEN ZHUOFAN
+Student No. : P2100746
+Student Class: DAAA/FT/1A/04
+Page:Home page (CSS)
+Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
+*/
 .mainvideo{
     display:flex;
     position: relative;
