--- a/css/future.css
+++ b/css/future.css
@@ -84,6 +84,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
 }
 .catt{
     perspective: 1000px;
+    width:20rem;height:25rem;
 }
 .aligncard{
     top:10%;
