--- a/css/index.css
+++ b/css/index.css
@@ -8,29 +8,30 @@ Student Class: DAAA/FT/1A/04
 Page:Home page (CSS)
 Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
 */
+/*background photo of the first cover section*/
 .mainvideo{
     display:flex;
     position: relative;
     justify-content: center;
-    left:0;
-    margin-top:72px;
+    left:0;/*Left 0 to avoid weird space*/
+    margin-top:72px;/*Avoid touching the navigation bar*/
     background:url("../cover/skycover.jpg");
     background-size:cover;
     width: 1980px;
     height: 900px;
 }
-
+/*Settings the clickable for 3D slideshows*/
 [type=radio] {
     display: none;
 }
-
+/*Enable 3D perspective */
 #slider {
     height: 500px;
     width:480px;
     perspective: 1000px;
     transform-style: preserve-3d;
 }
-
+/*Visible click area for switching */
 #slider label {
     margin: auto;
     width: 60%;
@@ -41,6 +42,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
     cursor: pointer;
     transition: transform 0.4s ease;
 }
+/*Settings for 3D slideshow and shadow,upon click ,using transform to move next position*/
 #s1:checked ~ #slide2,#s2:checked ~ #slide3,#s3:checked~#slide1{
     box-shadow: 0 6px 10px 0 rgba(0,0,0,.3), 0 2px 2px 0 rgba(0,0,0,.2);
     transform: translate3d(-30%,0,-100px);
@@ -53,29 +55,32 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
     box-shadow: 0 6px 10px 0 rgba(0,0,0,.3), 0 2px 2px 0 rgba(0,0,0,.2);
     transform: translate3d(30%,0,-100px);
 }
-
+/*Images for the 3D slideshows*/
 #slide1 { background: url("../aboutmephoto/myphoto1.jpg") }
 #slide2 { background:url("../aboutmephoto/myphoto2.jpg") }
 #slide3 { background: url("../aboutmephoto/myphoto3.jpg")}
 
-
+/*Card settings for the 4 cards at the more options section*/
 #card1,#card2,#card3,#card4{
     width: 100%;
     height: 100%;
     transition: transform 1s;
-    transform-style: preserve-3d;
+    transform-style: preserve-3d;/*Allow 3D perpection*/
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 
 }
+/*Upon hover rotate the card*/
 #card1:hover,#card2:hover,#card3:hover,#card4:hover{
     transform: rotateY(180deg);
     width: 100%;
     height: 100%;
 }
+/*Set backface visibility to not see behind*/
 #card1backside,#card1font,#card2backside,#card2font,#card3backside,#card3font,#card4backside,#card4font{
     position: absolute;
     backface-visibility: hidden;
 }
+/*Settings for back side of the cards so that it faces behind*/
 #card1backside,#card2backside,#card3backside,#card4backside{
     transform: rotateY(180deg);
     background-color: white;
@@ -86,10 +91,12 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
     perspective: 1000px;
     width:20rem;height:25rem;
 }
+/*Aligning the card*/
 .aligncard{
     top:10%;
     position:relative;
 }
+/*Set size for sketched image of Singapore Polytechnic*/
 .singaporepoly{
     width: 507px;
     background: url("../spphoto/sketchofsingaporepolytechnic.jpg");
@@ -97,12 +104,13 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
 
 
 }
+/*Set size of colored image of Singapore polytechnic*/
 .new{
     background: url("../spphoto/paintsingaporepolytechnic.jpg");
     width: 537px;
     height: 400px;
     transition: all 0.8s;
-    transition-delay: 0.2s;
+    transition-delay: 0.2s;/*Delay 2 s before executing*/
 
 }
 
