--- a/css/sp.css
+++ b/css/sp.css
@@ -8,9 +8,11 @@ Student Class: DAAA/FT/1A/04
 Page:Singapore Polytechnic Experience (CSS)
 Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
 */
+/*Shadow for the DAAA Class photo on the cover page*/
 #daaaimg{
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;"
 }
+/*Size,image and shadow for the classroom photo that is at the classroom section*/
 .singaporepoly{
     width: 507px;
     /*Image from SIngapore Polytechnic Website ,https://www.sp.edu.sg/sp/about-sp/facilities/teaching*/
@@ -19,22 +21,28 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;"
 
 }
+/*Size for the course information photo*/
 .daaacoverphoto{
     width:696px;
     height:500px;
 }
+/*Size of the carousel with shadow*/
 .spcarouselphoto1{
     width:500px;height:400px;box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
 }
+/*Size for individual photo in carousel*/
 .spcarouselphoto{
     height:400px;
 }
+/*Size of the studying icon at the studying section*/
 .studysvg{
     height:300px;
 }
+/*Size of the studying icon at the food section*/
 .foodsvg{
      height:300px;
  }
+/*Size of the SP Logo at the conclusion section*/
 .splogo{
     position:relative;
     top:50px;
