--- a/css/future.css
+++ b/css/future.css
@@ -8,18 +8,22 @@ Student Class: DAAA/FT/1A/04
 Page:Future Prospect (CSS)
 Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
 */
+
+/*Rocket animation container */
 #rocket{
     display:flex;
     justify-content: center;
     align-items: center;
-    border:1px solid grey;
-    height:500px;width:696px;
-    background:rgba(0, 0, 0, 0.9);
+    border:1px solid grey;/*Border*/
+    height:500px;width:696px;/*Size of box*/
+    background:rgba(0, 0, 0, 0.9);/*Black*/
+    /* Shadow*/
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;"
 }
+/*Animation of rocket moving up and down by using transform*/
 #innerrocket{
-    position:absolute;
-    animation:updown 0.2s linear infinite;
+    position:absolute;/*Set absolute positioning*/
+    animation:updown 0.2s linear infinite;/*Animation*/
 }
 @keyframes updown {
     from {
@@ -30,23 +34,26 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
     }
 
 }
+/*"Fire" of the rocket*/
 #line{
     position:relative;
-    background:linear-gradient(dodgerblue,transparent);
-    width:10px;
+    background:linear-gradient(dodgerblue,transparent);/*color from blue to transparent*/
+    width:10px;/*Set width*/
     left:50%;
     transform: translateX(-50%);
     height:70px;
     top:-20px;
 }
+/*The stars*/
 .rocket j{
     width:1px;
-    height:5px;
+    height:5px;/*Size*/
     position:relative;
     top:0;
     animation: line 2s linear infinite;
-    background-color:white;
+    background-color:white;/*White*/
 }
+/*Fly along certain length*/
 @keyframes line{
     from {
     transformY(0);
@@ -55,27 +62,33 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
         transform:translateY(45vh);
     }
 }
+/*DAAA Class photo */
 #daaaphoto{
-    width:500px;
+    width:500px;/*Size of image*/
+    /*Shadow*/
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;"
 }
+/* Card Setting*/
 #card1,#card2{
     width: 100%;
     height: 100%;
     transition: transform 1s;
-    transform-style: preserve-3d;
+    transform-style: preserve-3d;/*#3D Preserve */
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 
 }
+
 #card1:hover,#card2:hover{
-    transform: rotateY(180deg);
+    transform: rotateY(180deg);/*Upon hover ,rotate back*/
     width: 100%;
     height: 100%;
 }
+/*Not able to see backface*/
 #card1backside,#card1font,#card2backside,#card2font{
     position: absolute;
     backface-visibility: hidden;
 }
+/*Default at back card at 180*/
 #card1backside,#card2backside{
     transform: rotateY(180deg);
     background-color: white;
@@ -86,13 +99,16 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
     perspective: 1000px;
     width:20rem;height:25rem;
 }
+/*Align the card*/
 .aligncard{
     top:10%;
     position:relative;
 }
+/*Size of rocket*/
 .width50{
     width:50px;
 }
+/*Size for the cloud computing image at last section*/
 .cloudsvg{
     height:300px;
 }
