--- a/css/index.css
+++ b/css/index.css
@@ -113,4 +113,10 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
     transition-delay: 0.2s;/*Delay 2 s before executing*/
 
 }
+/*Linear gradient button*/
+#lineargr{
+    color:white;
+    background:linear-gradient(90deg,#009FFF,#ec2F4B);
+    border:0;
+}
 
