--- a/css/common.css
+++ b/css/common.css
@@ -52,8 +52,7 @@ html{
 #searchbar{
     position:fixed;/*Fixed positioning*/
     height:100%;
-    background-color: rgba(0,0,0,0.1);/*Set background color*/
-    backdrop-filter: blur(10px);
+   background:url("../searchpage/searchpage.jpg");/*Background photo for search*/
     top:80px;
     display:flex;
     left:0;
