--- a/css/index.css
+++ b/css/index.css
@@ -17,8 +17,9 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
     margin-top:72px;/*Avoid touching the navigation bar*/
     background:url("../cover/skycover.jpg");
     background-size:cover;
-    width: 1980px;
-    height: 900px;
+    width: 100vw;
+    height: 100vh;
+
 }
 /*Settings the clickable for 3D slideshows*/
 [type=radio] {
