--- a/css/index.css
+++ b/css/index.css
@@ -99,17 +99,17 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
 }
 /*Set size for sketched image of Singapore Polytechnic*/
 .singaporepoly{
-    width: 30vw;
+    width: 507px;
     background: url("../spphoto/sketchofsingaporepolytechnic.jpg");
-    height: 40vh;
+    height: 380px;
 
 
 }
 /*Set size of colored image of Singapore polytechnic*/
 .new{
     background: url("../spphoto/paintsingaporepolytechnic.jpg");
-    width: 30vw;
-    height: 40vh;
+    width: 537px;
+    height: 400px;
     transition: all 0.8s;
     transition-delay: 0.2s;/*Delay 2 s before executing*/
 
