--- a/css/about.css
+++ b/css/about.css
@@ -10,7 +10,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
 */
 /*Layer1: Time dependence feature:Use another color to fill background so that during spinning process,no white space will present*/
 #photo{
-    width:696px;
+    max-width:696px;
     height:500px;
     margin:0;
     padding:0;
@@ -21,7 +21,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
 #photocontainer{
 /*Images from https://dribbble.com/nanuo ,Recreated by ZhuoFan*/
     background: url("../aboutmephoto/greeting.jpg") center;
-    width:696px;/*Size*/
+    max-width:696px;/*Size*/
     height:1000px;
     transform: rotate(180deg);
     animation:spinday 4s ,3s alternate;/*Default Day*/
