--- a/css/future.css
+++ b/css/future.css
@@ -15,7 +15,8 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
     justify-content: center;
     align-items: center;
     border:1px solid grey;/*Border*/
-    height:500px;width:696px;/*Size of box*/
+    height:500px;
+    max-width:696px;/*Size of box*/
     background:rgba(0, 0, 0, 0.9);/*Black*/
     /* Shadow*/
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px
