--- a/css/secondary.css
+++ b/css/secondary.css
@@ -58,12 +58,9 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
 #slide3 { background: url("../secondaryschoolphoto/friendscarousel/friendsphoto3.jpg")}
 /*Shadow and width for pictures at the carousel of the cover page */
 .slidecarousell{
-    width:804px;box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    max-width:804px;box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
-/*height for individual pictures at the carousel of the cover page */
-.carouselphotosize{
-    height:500px;
-}
+
 /*Size of dunearn secondary school logo at conclusion*/
 .dunearnlogo{
     height:300px;
