--- a/css/common.css
+++ b/css/common.css
@@ -248,7 +248,7 @@ html{
 }
 /* Size of my photo at Science Center ,photo at about me page*/
 .photoeffectabout{
-    height:500px;/*Size*/
+    max-height:500px;/*Size*/
     /*Shadow*/
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
