--- a/css/index.css
+++ b/css/index.css
@@ -28,7 +28,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
 /*Enable 3D perspective */
 #slider {
     height: 500px;
-    width:480px;
+    max-width:480px;
     perspective: 1000px;
     transform-style: preserve-3d;
 }
@@ -40,7 +40,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
     border-radius: 4px;
     position: absolute;
     left: 0; right: 0;
-    cursor: pointer;
+    cursor: pointer;/*Allow click like effect when hover*/
     transition: transform 0.4s ease;
 }
 /*Settings for 3D slideshow and shadow,upon click ,using transform to move next position*/
@@ -99,7 +99,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
 }
 /*Set size for sketched image of Singapore Polytechnic*/
 .singaporepoly{
-    width: 507px;
+    max-width: 507px;
     background: url("../spphoto/sketchofsingaporepolytechnic.jpg");
     height: 380px;
 
@@ -108,7 +108,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
 /*Set size of colored image of Singapore polytechnic*/
 .new{
     background: url("../spphoto/paintsingaporepolytechnic.jpg");
-    width: 537px;
+    max-width: 537px;
     height: 400px;
     transition: all 0.8s;
     transition-delay: 0.2s;/*Delay 2 s before executing*/
