--- a/css/secondary.css
+++ b/css/secondary.css
@@ -24,7 +24,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
 /*Enable 3D perspective */
 #slider {
     height: 500px;
-    width:480px;
+    max-width:480px;
     perspective: 1000px;
     transform-style: preserve-3d;
 }
