--- a/css/sp.css
+++ b/css/sp.css
@@ -16,7 +16,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
 .singaporepoly{
     width: 507px;
     /*Image from SIngapore Polytechnic Website ,https://www.sp.edu.sg/sp/about-sp/facilities/teaching*/
-    background: url("../spphoto/classroom.jpg");
+    background: url("../photo/spphoto/classroom.jpg");
     height: 380px;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 
